<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>net.hep.ami</groupId>
	<artifactId>AMICore</artifactId>
	<version>1.0.0</version>

	<name>AMICore</name>
	<description>AMI Core</description>
	<url>https://www.cern.ch/ami/</url>

	<licenses>
		<license>
			<name>CeCILL, Version 2.1</name>
			<!--suppress HttpUrlsUsage -->
			<url>http://www.cecill.info/licences/Licence_CeCILL_V2.1-en.txt</url>
		</license>
	</licenses>

	<packaging>pom</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<distributionManagement>
		<!--*********************************************************************************************************-->

		<repository>
			<id>net.hep.ami-releases</id>
			<name>AMI Repository</name>
			<url>https://repo.ami-ecosystem.in2p3.fr/releases</url>
		</repository>

		<!--*********************************************************************************************************-->
	</distributionManagement>

	<repositories>
		<!--*********************************************************************************************************-->

		<repository>
			<id>net.hep.ami-releases</id>
			<name>AMI Repository</name>
			<url>https://repo.ami-ecosystem.in2p3.fr/releases</url>
		</repository>

		<!--*********************************************************************************************************-->
	</repositories>

	<dependencies>
		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>24.0.0</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.26</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.6</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<version>1.4.5</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.4.5</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>org.simplejavamail</groupId>
			<artifactId>simple-java-mail</artifactId>
			<version>7.8.1</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>org.eclipse.angus</groupId>
			<artifactId>angus-mail</artifactId>
			<version>2.0.1</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.14.2</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>net.sf.saxon</groupId>
			<artifactId>Saxon-HE</artifactId>
			<version>12.0</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpkix-jdk15on</artifactId>
			<version>1.70</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>com.auth0</groupId>
			<artifactId>java-jwt</artifactId>
			<version>4.2.2</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-runtime</artifactId>
			<version>4.11.1</version>

			<exclusions>
				<exclusion>
					<groupId>org.abego.treelayout</groupId>
					<artifactId>org.abego.treelayout.core</artifactId>
				</exclusion>
			</exclusions>

		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>org.apache.groovy</groupId>
			<artifactId>groovy</artifactId>
			<version>4.0.6</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>com.jcraft</groupId>
			<artifactId>jsch</artifactId>
			<version>0.1.55</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>8.0.32</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>org.mariadb.jdbc</groupId>
			<artifactId>mariadb-java-client</artifactId>
			<version>3.1.2</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>com.oracle.jdbc</groupId>
			<artifactId>ojdbc11</artifactId>
			<version>21.8.0.0.0</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.5.3</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>2.1.214</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.40.1.0</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>org.neo4j.driver</groupId>
			<artifactId>neo4j-java-driver</artifactId>
			<version>5.5.0</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>5.0.1</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
			<version>4.3.0</version>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>net.spy</groupId>
			<artifactId>spymemcached</artifactId>
			<version>2.12.3</version>
		</dependency>

		<!--*********************************************************************************************************-->
	</dependencies>

	<modules>
		<module>AMICoreLib</module>
		<module>AMICoreWeb</module>
	</modules>

</project>
